--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
   run:
     - python-coreapi >=2.0.0
     - django-stubs >=1.11.0
-    - mypy >=0.930,<0.950
+    - mypy >=0.950
     - python >=3.7
     - requests >=2.0.0
     - typing-extensions >=3.10.0
