--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,14 +19,13 @@ requirements:
   host:
     - pip
     - python >=3.7
+    - setuptools <64
   run:
-    - python-coreapi >=2.0.0
-    - django-stubs >=1.11.0
-    - mypy >=0.930,<0.950
+    - django-stubs >=1.13.0
+    - mypy >=0.980
     - python >=3.7
     - requests >=2.0.0
     - typing-extensions >=3.10.0
-    - types-markdown >=0.1.5
     - types-pyyaml >=5.4.3
     - types-requests >=0.1.12
 
@@ -34,8 +33,7 @@ requirements:
 test:
   imports:
     - mypy_drf_plugin
-    - mypy_drf_plugin.lib
-    - mypy_drf_plugin.transformers
+    - rest_framework-stubs
   commands:
     - pip check
   requires:
