--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools
   run:
-    - python >=3.8
-    - django-stubs >=5.0.4
+    - python >={{ python_min }}
+    - django-stubs >=5.1.1
     - typing-extensions >=3.10.0
     - requests >=2.0.0
     - types-requests >=0.1.12
@@ -35,6 +35,7 @@ test:
     - pip check
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://github.com/typeddjango/djangorestframework-stubs
