--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "djangorestframework-stubs" %}
 {% set version = "3.16.0" %}
+{% set python_min = "3.10" %}
 
 
 package:
@@ -19,14 +20,15 @@ requirements:
   host:
     - pip
     - python {{ python_min }}
-    - setuptools
+    - setuptools <79.0.0
+    - wheel
   run:
     - python >={{ python_min }}
-    - django-stubs >=5.1.3
-    - typing-extensions >=3.10.0
-    - requests >=2.0.0
-    - types-requests >=0.1.12
-    - types-pyyaml >=5.4.3
+    - django-stubs >=5.2.0
+    - typing_extensions >=4.0
+    - requests >=2.0
+    - types-requests
+    - types-pyyaml
 
 test:
   imports:
