--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -21,8 +21,7 @@ requirements:
   host:
     - pip
     - python ${{ python_min }}.*
-    - setuptools <79.0.0
-    - wheel
+    - uv-build >=0.8.19,<0.9.0
   run:
     - python >=${{ python_min }}
     - django-stubs >=5.2.5
